<resources>
    <string name="app_name">NecoIntent</string>
    <string name="strImAvatar1">Avatar</string>
    <string name="bSignIn1">Sign In</string>
    <string name="bSignUp1">Sign Up</string>
    <string name="strTv1">Empty</string>
    <string name="avatar">Avatar</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Имя</string>
    <string name="name1">Фамилия</string>
    <string name="name2">Отчество</string>
    <string name="done">Done</string>
</resources>