<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bSignIn1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/bSignIn1"
        app:layout_constraintBottom_toTopOf="@+id/bSignUp1"
        app:layout_constraintEnd_toEndOf="@+id/bSignUp1"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/bSignUp1" />

    <Button
        android:id="@+id/bSignUp1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="208dp"
        android:text="@string/bSignUp1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/strTv1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bSignIn1"
        app:layout_constraintEnd_toEndOf="@+id/bSignIn1"
        app:layout_constraintStart_toStartOf="@+id/bSignIn1" />

    <ImageView
        android:id="@+id/imAvatar1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tv1"
        app:layout_constraintEnd_toEndOf="@+id/bSignIn1"
        app:layout_constraintStart_toStartOf="@+id/bSignIn1"
        app:srcCompat="@drawable/smile"
        android:contentDescription="@string/strImAvatar1" />

</androidx.constraintlayout.widget.ConstraintLayout>